crates/review-buddy/tests/snapshots/composer__review_request_changes_160x40_default_theme.snap
---
source: crates/review-buddy/tests/composer.rs
expression: text(& render(& mut a))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
 GH liminal-hq/review-buddy#214 · liminal-hq · Add a menu bar and keyboard-driven menus · ada · ada/menus → main
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││              @@ -10,7 +10,9 @@ use crate::app::Action;                                                                     │
│  · src/ui/menubar.rs      +8 −0││›   10   10                                                                                                                 │
│  · src/ui/mod.rs          +2 −0││    11   11   pub struct Menu {                                                                                             │
│                                ││    12   12       items: Vec<MenuItem>,                                                                                     │
│                                ││         13 +     selected: usize,                                                                                          │
│                                ││         14 +     open: bool,                                                                                               │
│                                ││    13   15   }                                                                                                             │
│                                ││    14   16                                                                                                                 │
│                                ││    15   17   impl Menu {                                                                                                   │
│                                ││    16   18 ╭ Submit your review ────────────────────────────────────────────╮                                              │
│                                ││            │ ( ) 1 Comment  ( ) 2 Approve  (•) 3 Request changes            │                                              │
│                                ││    34   36 │                                                                │                                              │
│                                ││    35   37 │ Request changes with 1 comment                                 │                                              │
│                                ││    36   38 │ Verdict: request changes                                       │                                              │
│                                ││         39 │                                                                │                                              │
│                                ││         40 │ Summary (required)                                             │                                              │
│                                ││         41 │ ▏Please add a test first.                                      │                                              │
│                                ││         42 │ ▏                                                              │                                              │
│                                ││         43 │ ▏                                                              │                                              │
│                                ││         44 │                                                                │                                              │
│                                ││            │ • menus.rs line 51 · Fewer branches this way:                  │─────────────────────────────────────────────╮│
│                                ││            │                                                                │                                             ││
│                                ││            │   Cancel      Request changes                                  │p at the end.                                ││
│                                ││            │ tab then ⏎ submits · ⌃P submits now · esc cancels              │                                             ││
│                                ││            ╰────────────────────────────────────────────────────────────────╯make it configurable if you'd rather.        ││
│                                ││              ╰────────────────────────────────────────────────────────────────────────────────────────────────── r reply ─╯│
│                                ││         45 +     }                                                                                                         │
│                                ││         46 +                                                                                                               │
│ Your review · pending ─────────││         47 +     pub fn select_prev(&mut self) {                                                                           │
│1 suggestion · 0 comments       ││         48 +         if self.items.is_empty() {                                                                            │
│0 of 3 files viewed             ││         49 +             return;                                                                                           │
│Your review: not started        ││         50 +         }                                                                                                     │
│  menus.rs:51 Fewer branches th…││         51 +         self.selected = self.selected.checked_sub(1).unwrap_or(self.items.len() - 1);                         │
│Choosing: request changes       ││              ╭─ pending suggestion · line 51 ─────────────────────────────────────────────────────────────────────────────╮│
│                                ││              │ Fewer branches this way:                                                                                   ││
╰────────────────────────────────╯╰ hunk 1 of 3 · file 1 of 3 ─────────────────────────────────────────────────────────────────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  a approve  R submit a review  o open  y copy  esc back  ? help  T theme
